Add Receiver Activity + Add SSDPSocket engine

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">MultiShare</string>
-    <string name="title_activity_share">MultiShare</string>
+
+    <string name="receiver_ready">Ready to receive</string>
 
 </resources>
