--- a/Sender/res/values/strings.xml
+++ b/Sender/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MultiShareSender</string>
+    <string name="app_name">MultiShare</string>
 
 </resources>
